[gd_scene load_steps=8 format=3 uid="uid://b8t5or5j6y2jr"]

[ext_resource type="Script" uid="uid://drrvknas815hf" path="res://capture/xr_origin_3d.gd" id="1"]
[ext_resource type="Script" uid="uid://p3plf7ofmst" path="res://capture/capture_manager.gd" id="2"]
[ext_resource type="Script" uid="uid://c76clskc1kfav" path="res://capture/speed_monitor.gd" id="3"]
[ext_resource type="Script" uid="uid://du6jf1p6w7nk8" path="res://capture/recorder.gd" id="4"]
[ext_resource type="Script" uid="uid://dbevil6faoavm" path="res://capture/hud.gd" id="5"]
[ext_resource type="Script" uid="uid://bku2qi2e8bt8j" path="res://capture/coverage_visualizer.gd" id="6"]
[ext_resource type="Script" uid="uid://nptbb7fkdufq" path="res://capture/path_guide.gd" id="7"]

[node name="Root" type="Node3D" unique_id=421191721]
script = ExtResource("2")

[node name="XROrigin3D" type="XROrigin3D" parent="." unique_id=1425616152]
script = ExtResource("1")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D" unique_id=1189985636]

[node name="SpeedMonitor" type="Node" parent="." unique_id=642310308]
script = ExtResource("3")

[node name="Recorder" type="Node" parent="." unique_id=189480280]
script = ExtResource("4")

[node name="CoverageVisualizer" type="Node3D" parent="." unique_id=274307201]
script = ExtResource("6")

[node name="PathGuide" type="Node3D" parent="." unique_id=899273477]
script = ExtResource("7")

[node name="HUD" type="CanvasLayer" parent="." unique_id=440765604]
script = ExtResource("5")
